--- a/app/src/main/res/layout/activity_add_bar.xml
+++ b/app/src/main/res/layout/activity_add_bar.xml
@@ -7,9 +7,11 @@
     tools:context=".AddBarActivity">
 
     <com.google.android.material.appbar.AppBarLayout
+        android:id="@+id/appBarLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:theme="@style/Theme.LifeBar.AppBarOverlay">
+        android:theme="@style/Theme.LifeBar.AppBarOverlay"
+        app:layout_constraintTop_toTopOf="parent">
 
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar"
@@ -25,7 +27,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="textPersonName"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/appBarLayout"
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_margin="10pt"
         android:hint="Title"/>
